cambios de get(0) por getFirst